Add simple sugarcane populator and some code improvements